Successfully Completed The Registration of the User and successfully added the accounts information to the Database Salor

--- a/SalesReportApp/src/main/webapp/WEB-INF/web.xml
+++ b/SalesReportApp/src/main/webapp/WEB-INF/web.xml
@@ -50,7 +50,16 @@
   	<url-pattern>/profile</url-pattern>
   </servlet-mapping>
   
+  <!-- SignupServlet URL Configuration -->
+  <servlet>
+  	<servlet-name>signupservlet</servlet-name>
+  	<servlet-class>com.salor.servlets.SignUpServlet</servlet-class>
+  </servlet>
   
+  <servlet-mapping>
+  	<servlet-name>signupservlet</servlet-name>
+  	<url-pattern>/signupurl</url-pattern>
+  </servlet-mapping>
   
   
   
