Added the LoginServlet file and performed login form Client Side Validations

--- a/SalesReportApp/src/main/webapp/WEB-INF/web.xml
+++ b/SalesReportApp/src/main/webapp/WEB-INF/web.xml
@@ -61,6 +61,17 @@
   	<url-pattern>/signupurl</url-pattern>
   </servlet-mapping>
   
+  <!-- LoginServlet URL Configuration -->
+  <servlet>
+  	<servlet-name>loginServlet</servlet-name>
+  	<servlet-class>com.salor.servlets.LoginServlet</servlet-class>
+  </servlet>
+  
+  <servlet-mapping>
+  	<servlet-name>loginServlet</servlet-name>
+  	<url-pattern>/loginurl</url-pattern>
+  </servlet-mapping>
+  
   
   
   
