Implemented Inserting Product Sales Feature & modifications in the Delete Product Operation
Added InsertProductSalesServlet.java file :
	This file acts as a Controller between the insertRecord.jsp
	file (Presentation Layer) and the Service layer. This file
	retrieves all the information from the form and calculates the
	total cost, total sales, net profit and net loss of that
	particular sales and packs all the details into a single object
	for passing the details into the Service layer along with the
	UserID. After successfull Insertion Operation it redirects to
	the insertRecord.jsp page and displays the relevent message.

Added insertProductSalesService(SalorProducrBean pdt,String userid) in
the Service Layer :
	This method acts as an communicator between the Service Layer
	and the DAO Layer. It just passes the SalorProductBean Class
	object along with the userId to the DAO Layer for the insertion
	of product sales Operation and returns the status of the
	Operation to the Controller Layer.

Added insertProductSales(SalorProductBean pdt,String userID) in the DAO
Layer :
	This method in the DAO layer communicates with the database for
	the insertion of product sales Operation. This method retrieves
	all the attributes of the SalorProductBean Object , execute the
	insert query and returns the status based on the insertion
	Operation.

Fixed Some Bugs in the DeleteProductServlet.java file
	It had a Bug that the page cannot redirect to the
	GenerateProductListServlet after the successfull deletion of the
	product for generating the updated product List.
	The Redirecting URL pattern was missing the opcode attribute
	which has been added and the operation is now performing as
	intended.

--- a/SalesReportApp/src/main/webapp/WEB-INF/web.xml
+++ b/SalesReportApp/src/main/webapp/WEB-INF/web.xml
@@ -72,15 +72,15 @@
   	<url-pattern>/insertpdturl</url-pattern>
   </servlet-mapping>
   
-  <!-- Insert/Update Product's Sales page URL configuration -->
+  <!-- Insert Product's Sales page URL configuration -->
   <servlet>
-  	<servlet-name>updateInsertSales</servlet-name>
-  	<jsp-file>/pages/updateSales.jsp</jsp-file>
+  	<servlet-name>insertProductSales</servlet-name>
+  	<jsp-file>/pages/insertRecord.jsp</jsp-file>
   </servlet>
   
   <servlet-mapping>
-  	<servlet-name>updateInsertSales</servlet-name>
-  	<url-pattern>/insertUpdateSales</url-pattern>
+  	<servlet-name>insertProductSales</servlet-name>
+  	<url-pattern>/insertProductSales</url-pattern>
   </servlet-mapping>
   
   <!-- Delete Product Sales Page URL Configuration -->
