Implemented the Update Sale's Report Functionality and Delete Sale's Record functionality of the product fully

--- a/SalesReportApp/src/main/webapp/WEB-INF/web.xml
+++ b/SalesReportApp/src/main/webapp/WEB-INF/web.xml
@@ -171,8 +171,16 @@
   	<url-pattern>/updateDeleteSales</url-pattern>
   </servlet-mapping>
   
+  <!-- UpdateSales.jsp page URL Configuration -->
+  <servlet>
+  	<servlet-name>productToBeUpdated</servlet-name>
+  	<jsp-file>/pages/updatesales.jsp</jsp-file>
+  </servlet>
   
-  
+  <servlet-mapping>
+  	<servlet-name>productToBeUpdated</servlet-name>
+  	<url-pattern>/updatedInfo</url-pattern>
+  </servlet-mapping>  
   
   
   
